<resources>
    <string name="app_name">CallADoctor</string>
    <string name="promptIC">Enter IC No</string>
    <string name="promptPassword">Enter Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="icNo">IC No</string>
    <string name="gender">Gender</string>
    <string name="birthDate">Birth Date</string>
    <string name="phone">Phone No</string>
    <string name="doctorPhoneTitle">Phone :</string>
    <string name="email">Email</string>
    <string name="doctorEmailTitle">Email :</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="address">Address</string>
    <string name="registration">Registration</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="forgotPasswordTitle">Forgot Your Password?</string>
    <string name="registeredEmail">Registered Email</string>
    <string name="continueButton">Continue</string>
    <string name="backToSignIn">Back to Sign In</string>
    <string name="resetPasswordTitle">Reset Password</string>
    <string name="newPass">New Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="home">Home</string>
    <string name="appointment">Appointment</string>
    <string name="profile">Profile</string>
    <string name="clinic">Clinic</string>
    <string name="searchClinic">Search Clinic</string>
    <string name="upcomingAppointment">Upcoming Appointment</string>
    <string name="seeAll">See All</string>
    <string name="clinicList">Clinic List</string>
    <string name="makeAppointment">Make Appointment</string>
    <string name="viewDoctorList">View Doctor List</string>
    <string name="neoClinic">Neo Clinic</string>
    <string name="totalAppointment">Total Appointments</string>
    <string name="numTotalAppointment">87</string>
    <string name="numCompletedAppointment">78</string>
    <string name="completed">Completed</string>
    <string name="numPendingAppointment">5</string>
    <string name="pending">Pending</string>
    <string name="numUpcomingAppointment">4</string>
    <string name="Upcoming">Upcoming</string>
    <string name="overtimeRequest">Overtime Request</string>
    <string name="patient_1">Chris</string>
    <string name="date_booking">Booking on 20th November 2023</string>
    <string name="appointmentRequest">Appointment Request</string>
    <string name="title_activity_clinic_home_page">ClinicHomePageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_doctor">Doctor</string>
    <string name="searchDoctor">Search Doctor</string>
    <string name="doctorName">Doctor XXX</string>
    <string name="doctorPhone">+87 87-878-787</string>
    <string name="doctorEmail">docterxxx@email.com</string>
    <string name="title_comfirm_assign_doctor">Assign Dr XXX to the Appointment ?</string>
    <string name="title_comfirm_remove_doctor">Remove Dr XXX ?</string>
    <string name="title_change_time">Change Time to 23 March 2023 14.00pm ?</string>
    <string name="date">Date</string>
    <string name="time_slot">Time Slot</string>
    <string name="patientTitleName">Name</string>
    <string name="patientName">Jason Hamilton</string>
    <string name="patientIC">878787-87-8787</string>
    <string name="patientBirthdate">12 March 2000</string>
    <string name="patientContact">012-878-8787</string>
    <string name="patientTitleContact">Contact</string>
    <string name="patientEmail">aemail@email.com</string>
    <string name="patientAddress">32, Lengkok Nipah 2, Taman Jubilee, 11700 Bayan Lepas, Pulau Pinang</string>
    <string name="appointmentInformation">Appointment Information</string>
    <string name="timeDateTitle">Preferred Time and Date</string>
    <string name="timeDate">12-March-2023.11am</string>
    <string name="appointDetailStatus">Status</string>
    <string name="pendingStatus">Pending</string>
    <string name="appointmentCodeTitle">Appointment Code</string>
    <string name="appointmentCode">A8787878787</string>
    <string name="titleCompleteTimeDate">Completed Time and Data</string>
    <string name="None">None</string>
    <string name="descriptionDetails">aAAAAAASDWSDONOSANOBCOASnosCONONANncnsNNLCKW</string>
    <string name="title_reason">Reason</string>
    <string name="doctorList">Doctor List</string>
    <string name="bookAppointment">Book Appointment</string>
    <string name="preferredDate">Preferred Date</string>
    <string name="preferredTimeSlot">Preferred Time Slot</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="editProfile">Edit Profile</string>
    <string name="changePassword">Change Password</string>
    <string name="changeEmail">Change Email</string>
    <string name="save">Save</string>
    <string name="appointmentList">Appointment List</string>
    <string name="pending_request">Pending Request</string>
    <string name="search_appointment">Search Appointment</string>
    <string name="log_out">Log out</string>
    <string name="doctor_appointed">Doctor Appointed</string>
    <string name="time_requested">Time Requested</string>
    <string name="time_accepted">Time Accepted</string>
    <string name="appointment_code">Appointment Code</string>
    <string name="preferred_time_and_date">Preferred Time And Date</string>
    <string name="completed_time">Completed Time</string>
    <string name="appointment_detail">Appointment Detail</string>
    <string name="request">Request</string>
    <string name="dPA_appointmentDetails">Appointment Detail</string>
    <string name="dPA_nameTitle">Name</string>
    <string name="dPA_IcTitle">IC NO</string>
    <string name="dPA_birthDateTitle">Birth Date</string>
    <string name="dPA_contactTitle">Contact</string>
    <string name="dPA_genderTitle">Gender</string>
    <string name="dPA_emailTitle">Email</string>
    <string name="dPA_addressTitle">Address</string>
    <string name="dPA_appointmentInformation">Appointment Information</string>
    <string name="dPA_preDateTimeTitle">Preferred Date and Time</string>
    <string name="dPA_preDate">12 March 2023</string>
    <string name="dPA_preTime">11am</string>
    <string name="dPA_statusTitle">Status</string>
    <string name="dPA_status">Pending</string>
    <string name="dPA_appointmentCodeTitle">Appointment Code</string>
    <string name="dPA_appointmentCode">A8787878787</string>
    <string name="dPA_completedDateTimeTitle">Completed Date and Time</string>
    <string name="dPA_completedDateTime">None</string>
    <string name="dPA_descriptionTitle">Description / Symptoms</string>
    <string name="dPA_description">aAAAAAASDWSDONOSANOBCOASnosCONONANncnsNNLCKWO:LS{CMAPNWIOCSLSK CLALMWPFONWIAN S p MSPNFEW)_A NSp dPWNPN_Q N</string>
    <string name="dPA_acceptButton">Accept</string>
    <string name="dAA_appointmentDetails">Appointment Detail</string>
    <string name="dAA_nameTitle">Name</string>
    <string name="dAA_IcTitle">IC NO</string>
    <string name="dAA_birthDateTitle">Birth Date</string>
    <string name="dAA_contactTitle">Contact</string>
    <string name="dAA_genderTitle">Gender</string>
    <string name="dAA_emailTitle">Email</string>
    <string name="dAA_addressTitle">Address</string>
    <string name="dAA_appointmentInformation">Appointment Information</string>
    <string name="dAA_preDateTimeTitle">Preferred Date and Time</string>
    <string name="dAA_preDate">12 March 2023</string>
    <string name="dAA_preTime">11am</string>
    <string name="dAA_statusTitle">Status</string>
    <string name="dAA_status">Pending</string>
    <string name="dAA_appointmentCodeTitle">Appointment Code</string>
    <string name="dAA_appointmentCode">A8787878787</string>
    <string name="dAA_completedDateTimeTitle">Completed Date and Time</string>
    <string name="dAA_completedDateTime">None</string>
    <string name="dAA_descriptionTitle">Description / Symptoms</string>
    <string name="dAA_description">aAAAAAASDWSDONOSANOBCOASnosCONONANncnsNNLCKWO:LS{CMAPNWIOCSLSK CLALMWPFONWIAN S p MSPNFEW)_A NSp dPWNPN_Q N</string>
    <string name="dAA_leftButton">Prescription</string>
    <string name="dAA_rightButton">Follow-Up</string>
    <string name="dFA_title">Follow-Up Appointment</string>
    <string name="dFA_patient">Patient:</string>
    <string name="dFA_preferredDate">Preferred Date</string>
    <string name="dFA_preferredTime">Preferred Time</string>
    <string name="dFA_description">Description</string>
    <string name="dFA_leftButton">Follow Up Appointment</string>
    <string name="dFA_rightButton">Cancel</string>
    <string name="dHP_welcome">Welcome Dr</string>
    <string name="dHP_upcomingAppointmentTitle">Upcoming Appointment</string>
    <string name="dHP_seeAllButton1">See all</string>
    <string name="dHP_seeAllButton2">See all</string>
    <string name="dHP_pendingRequestTitle">Pending Request</string>
    <string name="dHP_appointmentListTitle">Appointment List</string>
    <string name="dAL_appointmentList">Appointment List</string>
    <string name="dAL_pendingRequestTitle">Pending Request</string>
    <string name="dAL_appointmentListTitle">Appointment List</string>
    <string name="dAL_searchBarHint">Search Appointment</string>
    <string name="rV_bookOn">Booking on</string>
    <string name="prescription_description">Prescription / Description</string>
    <string name="confirm_exit_application">Confirm Exit Application?</string>
    <string name="exit_application">Exit Application?</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="logout">LOGOUT</string>
    <string name="cP_profile">Profile</string>
    <string name="cP_clinic">Clinic: </string>
    <string name="cont">Continue</string>
    <string name="back_to_login">Back To Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_clinic_name">Search Clinic Name</string>
    <string name="upcoming_appointment">Upcoming Appointment</string>
    <string name="empty">Empty</string>


</resources>