<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPassword"
    android:background="@drawable/login_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetPasswordTitle"
            android:textSize="27dp"
            android:fontFamily="@font/roboto_bold"
            android:layout_gravity="center"
            />

        <EditText
            android:layout_width="290dp"
            android:layout_height="48dp"
            android:hint="@string/newPass"
            android:textSize="23dp"
            android:background="@drawable/input_background_blue"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"/>

        <EditText
            android:layout_width="290dp"
            android:layout_height="48dp"
            android:hint="@string/confirmPass"
            android:textSize="23dp"
            android:background="@drawable/input_background_blue"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/continueButton"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:background="@drawable/dark_blue_button"
            android:paddingHorizontal="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>