<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage"
    android:background="@drawable/login_background">



    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo"
        android:layout_marginTop="180dp"


        />

    <EditText
        android:id="@+id/inputIC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:hint="@string/promptIC"
        android:background="@drawable/input_background"
        android:layout_marginHorizontal="50dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="11dp"
        android:layout_marginTop="20dp"

        style="@style/inputText"

        />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/inputIC"
        android:hint="@string/promptPassword"
        android:background="@drawable/input_background"
        android:layout_marginHorizontal="50dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="11dp"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        android:stateListAnimator="@null"



        style="@style/inputText"

        />

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        app:layout_constraintStart_toStartOf="@id/inputPassword"
        android:text="@string/forgetPassword"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"

        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:backgroundTint="@color/darkBlue"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintTop_toBottomOf="@id/forgetPassword"
        app:layout_constraintStart_toStartOf="@id/inputPassword"
        app:layout_constraintEnd_toStartOf="@id/signupButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"

        app:layout_constraintHorizontal_weight="1"


        />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:backgroundTint="@color/darkBlue"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintTop_toBottomOf="@id/forgetPassword"
        app:layout_constraintEnd_toEndOf="@id/inputPassword"
        app:layout_constraintStart_toEndOf="@id/loginButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_weight="1"


        />




</androidx.constraintlayout.widget.ConstraintLayout>