<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationPage"
    android:background="@drawable/login_background">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            >
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/registration"
                android:textSize="30dp"
                android:textColor="@color/darkBlue"
                android:layout_marginTop="20dp"

                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:hint="@string/fName"
                app:boxStrokeColor="@color/blue"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/blue"
                app:layout_constraintHeight_max="60dp"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/lastName"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_weight="1"
                android:layout_marginTop="20dp"



                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:hint="@string/lName"
                app:boxStrokeColor="@color/blue"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/blue"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintHeight_max="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/firstName"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_weight="1"
                android:layout_marginTop="20dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/icNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/firstName"
                android:hint="@string/icNo"
                app:boxStrokeColor="@color/blue"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/blue"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintHeight_max="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:helperTextEnabled="true"
                app:helperText="Eg: 123456-78-9012"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/gender"
                android:checkedButton="@+id/radio_button_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/icNo"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"



                >

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/male"
                    android:layout_weight="1"
                    android:checked="true"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="20sp"
                    app:buttonTint="@color/blue"


                    />
                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/female"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="20sp"
                    app:buttonTint="@color/blue"

                    />

            </RadioGroup>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/gender"
                android:hint="@string/birthDate"
                app:boxStrokeColor="@color/blue"
                app:hintTextColor="@color/blue"
                app:layout_constraintHeight_max="60dp"
                android:layout_marginHorizontal="10dp"


                app:startIconDrawable="@drawable/calendar"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:focusable="false"
                    android:clickable="false"
                    android:singleLine="true"



                    />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/birthDateClickable"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="@id/birthDate"
                app:layout_constraintEnd_toEndOf="@id/birthDate"
                app:layout_constraintTop_toTopOf="@id/birthDate"
                app:layout_constraintBottom_toBottomOf="@id/birthDate"

                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/birthDate"
                android:hint="@string/phone"
                app:boxStrokeColor="@color/blue"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/blue"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintHeight_max="60dp"
                android:layout_marginTop="10dp"


                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/phoneNo"
                android:hint="@string/email"
                app:boxStrokeColor="@color/blue"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/blue"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintHeight_max="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:helperTextEnabled="true"
                app:helperText="Eg: mathew@gmail.com"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/email"
                android:hint="@string/password"
                app:boxStrokeColor="@color/blue"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/blue"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintHeight_max="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:helperTextEnabled="true"
                app:helperText=""
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/password"
                android:hint="@string/confirmPassword"
                app:boxStrokeColor="@color/blue"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/blue"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintHeight_max="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/confirmPassword"
                android:hint="@string/address"
                app:boxStrokeColor="@color/blue"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/blue"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"



                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="4"
                    android:maxLines="8"
                    android:gravity="top|start"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:backgroundTint="@color/darkBlue"
                style="@style/Widget.MaterialComponents.Button"
                app:layout_constraintTop_toBottomOf="@id/address"
                app:layout_constraintStart_toStartOf="@id/address"
                app:layout_constraintEnd_toStartOf="@id/backButton"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintHeight_min="54dp"



                app:layout_constraintHorizontal_weight="1"


                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@color/darkBlue"
                android:backgroundTint="@color/white"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:layout_constraintTop_toBottomOf="@id/address"
                app:layout_constraintEnd_toEndOf="@id/address"
                app:layout_constraintStart_toEndOf="@id/registerButton"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintHorizontal_weight="1"
                app:strokeColor="@color/darkBlue"
                app:layout_constraintHeight_min="54dp"



                />

        </androidx.constraintlayout.widget.ConstraintLayout>






    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>